--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cross-env": "^7.0",
         "laravel-mix": "^6.0.18",
         "lodash": "^4.17.13",
+        "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
